fix(provider): wrong container image name (vmclarity#772)
* feat(api): make container and image id required

* feat(provider): remove slash from container name

* feat(provider): replace image name with repotags and repodigest

* feat(provider): add container and image info to asset type

* refactor(provider): code review changes

* test(provider): test image asset is found and scanned

* refactor(provider): code review changes
